--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,16 @@
   "name": "basecast-frontend",
   "private": true,
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wagmi": "^2.5.0",
-    "viem": "^2.7.0"
+    "viem": "^2.7.0",
+    "@tanstack/react-query": "^5.0.0"
   }
 }
